--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Filtrar Dados por Data</title>
+    <title>Filtrar por Data</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
